fixe des pages details
