# src/main/resources/templates/openapi.yaml
@@ -758,10 +758,83 @@ paths:
       summary: Update property
       description: update property existing
       operationId: updateProperty
+      requestBody:
+        description: update property object
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Property'
+      responses:
+        default:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Property'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: User not found
+    delete:
+      tags:
+        - property
+      summary: Delete property by ID
+      description: delete property .
+      operationId: deleteProperty
+      requestBody:
+        description: update property object
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Property'
+      responses:
+        default:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Property'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: User not found
+
+  /properties/{propertyId}:
+    get:
+      tags:
+        - property
+      summary: Get property by ID
+      operationId: getPropertyById
       parameters:
         - name: propertyId
           in: path
-          description: ID that need to be updated
+          description: The ID that needs to be updated
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        default:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Property'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: property not found
+
+    put:
+      tags:
+        - property
+      summary: Update property
+      description: update property existing by ID
+      operationId: updatePropertyById
+      parameters:
+        - name: propertyId
+          in: path
+          description: The ID that needs to be updated
           required: true
           schema:
             type: integer
@@ -782,7 +855,7 @@ paths:
         - property
       summary: Delete property by ID
       description: delete property .
-      operationId: deleteProperty
+      operationId: deletePropertyById
       parameters:
         - name: propertyId
           in: path
@@ -794,10 +867,7 @@ paths:
       responses:
         default:
           description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Property'
+
         '400':
           description: Invalid ID supplied
         '404':
@@ -860,33 +930,6 @@ paths:
                       type: string
                     zip:
                       type: string
-
-  /properties/{propertyId}:
-    get:
-      tags:
-        - property
-      summary: Get property by property Id
-      description: ''
-      operationId: getPropertyById
-      parameters:
-        - name: propertyId
-          in: path
-          description: 'The id that needs to be fetched. Use property1 for testing. '
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Property'
-        '400':
-          description: Invalid ID supplied
-        '404':
-          description: Property not found
 
   /properties/{propertyId}/lease:
     get:
